; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mov.c_mov_read_meta.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mov.c_mov_read_meta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@AVERROR_EOF = common dso_local global i32 0, align 4
@SEEK_CUR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @mov_read_meta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mov_read_meta(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store i32 %2, i32* %9, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  br label %10

10:                                               ; preds = %41, %3
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp sgt i32 %12, 8
  br i1 %13, label %14, label %42

14:                                               ; preds = %10
  %15 = load i32*, i32** %7, align 8
  %16 = call i64 @avio_feof(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @AVERROR_EOF, align 4
  store i32 %19, i32* %4, align 4
  br label %43

20:                                               ; preds = %14
  %21 = load i32*, i32** %7, align 8
  %22 = call i64 @avio_rl32(i32* %21)
  store i64 %22, i64* %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = sub nsw i32 %24, 4
  store i32 %25, i32* %23, align 4
  %26 = load i64, i64* %8, align 8
  %27 = call i64 @MKTAG(i8 signext 104, i8 signext 100, i8 signext 108, i8 signext 114)
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %41

29:                                               ; preds = %20
  %30 = load i32*, i32** %7, align 8
  %31 = load i32, i32* @SEEK_CUR, align 4
  %32 = call i32 @avio_seek(i32* %30, i32 -8, i32 %31)
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %34, 8
  store i32 %35, i32* %33, align 4
  %36 = load i32*, i32** %6, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @mov_read_default(i32* %36, i32* %37, i32 %39)
  store i32 %40, i32* %4, align 4
  br label %43

41:                                               ; preds = %20
  br label %10

42:                                               ; preds = %10
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %42, %29, %18
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i64 @avio_feof(i32*) #1

declare dso_local i64 @avio_rl32(i32*) #1

declare dso_local i64 @MKTAG(i8 signext, i8 signext, i8 signext, i8 signext) #1

declare dso_local i32 @avio_seek(i32*, i32, i32) #1

declare dso_local i32 @mov_read_default(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
